log-output-multi/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-multi-service
spec:
  type: ClusterIP
  selector:
    app: log-output-multi
  ports:
  - port: 80
    targetPort: 3000
